# K-Token-Merging

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/amazon_reviews/: run.py
scripts/commitpackft/: run.py
scripts/textualized_tree/: generate_curriculum_datasets.py  generate_data.py  run.py
scripts/utils/: extract_embeddings.py
src/k_token_merging/: __init__.py  compression.py  data.py  encoder.py  metrics.py  modeling.py
